--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   image_picker: ^1.1.2
+  camera: ^0.11.0+2
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +56,7 @@ dev_dependencies:
 flutter:
   assets:
     - lib/images/qr-scan.png
+    - lib/images/indian.jpg
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
