--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   image_picker: ^1.1.2
   camera: ^0.11.0+2
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +58,7 @@ flutter:
   assets:
     - lib/images/qr-scan.png
     - lib/images/indian.jpg
+    - lib/images/add-user.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
