--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,8 @@ flutter:
     - lib/images/qr-scan.png
     - lib/images/indian.jpg
     - lib/images/add-user.png
-
+    - lib/images/user-gear.png
+    - lib/images/user.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
