--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   image_picker: ^1.1.2
   camera: ^0.11.0+2
   animated_text_kit: ^4.2.2
+  file_picker: ^8.1.2
 
 dev_dependencies:
   flutter_test:
