--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   camera: ^0.11.0+2
   animated_text_kit: ^4.2.2
   file_picker: ^8.1.2
+  video_player: ^2.9.2
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +63,8 @@ flutter:
     - lib/images/add-user.png
     - lib/images/user-gear.png
     - lib/images/user.png
+    - lib/images/Fdsap.png
+    - lib/images/fdsap.mp4
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
