--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   file_picker: ^8.1.2
   video_player: ^2.9.2
+  table_calendar: ^3.1.2
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +69,7 @@ flutter:
     - lib/images/bgfdsap.png
     - lib/images/1005.png
     - lib/images/bilog.png
+    - lib/images/fds.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
