--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
     - lib/images/1005.png
     - lib/images/bilog.png
     - lib/images/fds.png
+    - lib/images/fds-icon.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
