--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   table_calendar: ^3.1.2
   url_launcher: ^6.3.1
   permission_handler: ^11.3.1
+  google_ml_kit: ^0.19.0
 
 dev_dependencies:
   flutter_test:
