--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   url_launcher: ^6.3.1
   permission_handler: ^11.3.1
   google_ml_kit: ^0.19.0
+  google_mlkit_face_detection: ^0.12.0
+  opencv_dart: ^1.3.1
+  shared_preferences: ^2.3.2
+  fl_chart: ^0.69.0
 
 dev_dependencies:
   flutter_test:
