--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   opencv_dart: ^1.3.1
   shared_preferences: ^2.3.2
   fl_chart: ^0.69.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
