--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,10 +45,12 @@ dependencies:
   permission_handler: ^11.3.1
   google_ml_kit: ^0.19.0
   google_mlkit_face_detection: ^0.12.0
-  opencv_dart: ^1.3.1
+  #opencv_dart: ^1.3.1
   shared_preferences: ^2.3.2
   fl_chart: ^0.69.0
   provider: ^6.1.2
+  path_provider: ^2.1.5
+  convert: ^3.1.2
 
 dev_dependencies:
   flutter_test:
